--- a/curriculum.html
+++ b/curriculum.html
@@ -1,7 +1,16 @@
 <HTML>
 <HEAD></HEAD>
 <BODY>
-Versao 1.0</br>
-Italo Oliveira</BODY>
+Versao 2.0</br>
+Italo Oliveira</br>
+Avenida Sebastião Carlos Leite 
+São João Nepomuceno
+
+
+
+
+
+
+</BODY>
 
 </HTML>
